refactor: move cluster-specific info to the clusters.yaml file

--- a/dev_config.yaml
+++ b/dev_config.yaml
@@ -48,8 +48,8 @@ singleuser:
     name: "brineylab/jupyterhub-datascience"
     tag: "v2024-09-12"
 
-  # dummy profiles for image pre-pulling
-  # these get overwritten at runtime
+  # update images here!
+  # dummy profiles for image pre-pulling that get overwritten at runtime
   # display names are used as keys in the options form, so don't change them
   profileList:
     - display_name: "datascience"
@@ -119,7 +119,8 @@ hub:
   networkPolicy:
     enabled: false
 
-  # needs to be non-root user (root is 0): https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/39
+  # needs to be non-root user (root is 0)
+  # ref: https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/39
   containerSecurityContext:
     runAsUser: 1000
     runAsGroup: 0
@@ -131,14 +132,16 @@ hub:
   #   type: postgres
   #   url: "postgresql://brineylab:@192.168.1.1:5432/jupyterhub_db"
 
-  # extraEnv:
+  extraEnv:
+    # set cluster name, as in clusters.yaml
+    JUPYTERHUB_CLUSTER: "dev"
   #   PGPASSWORD: # will automatically provide password when env variable is named PGPASSWORD
   #     valueFrom:
   #       secretKeyRef:
   #         name: postgres-secret
   #         key: POSTGRES_PASSWORD
 
-  # Mount users and home page configmaps
+  # mount users and home page configmaps
   extraVolumes:
     - name: templates
       configMap:
@@ -162,77 +165,58 @@ hub:
 
   extraConfig:
     # set env variables
-    env: |
+    00-env: |
       c.KubeSpawner.environment = {'NB_UMASK': '0000'}
       c.KubeSpawner.allow_privilege_escalation = True
       c.KubeSpawner.args = ["--allow-root"]
 
+    # build config with image info
+    01-config: |
+      import sys
+      sys.path.append('/etc/jupyterhub/config')
+
+      from config_builder import update_config
+      update_config(c.KubeSpawner.profile_list)
+
     # custom templates
-    templates: |
+    02-templates: |
       import os, nativeauthenticator
+      from config_builder import CONFIG
 
       # inject custom templates
       c.JupyterHub.template_paths = ["/etc/jupyterhub/templates", 
                                       f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
-
-      # set url for gpu status
-      c.JupyterHub.template_vars.update({
-          "gpu_status_url": "http://172.29.180.191:5000/gpu_status_bynode",
-          "cpu_status_url": "http://172.29.180.191:5001/cpu_status_bynode"
-      })
 
       # ref: https://github.com/jupyterhub/kubespawner/blob/main/kubespawner/spawner.py#L1699
       # bootstrap updated to v5 -> removes the 'hidden' class, need to use 'd-none' instead
       # kubespawner hasn't updated their html template with this fix as of Feb 20th 2026
       c.KubeSpawner.additional_profile_form_template_paths = "/etc/jupyterhub/templates"
 
+      # set url for gpu status
+      c.JupyterHub.template_vars.update(CONFIG["status_urls"])
+
     # setup users and named server limits
-    users: |
-      import yaml
+    03-users: |
+      from config_builder import CONFIG
 
-      with open("/etc/jupyterhub/config/users.yaml") as f:
-        users = yaml.safe_load(f)
+      users = CONFIG["users"]
+      user_roles = CONFIG["user_roles"]
+      server_limits = CONFIG["named_server_limits"]
 
-      c.Authenticator.admin_users = users.get("admin", [])
-      c.Authenticator.allowed_users = set(users.get("admin", []) + users.get("gpu", []) + users.get("regular", []))
+      c.Authenticator.admin_users = set(users.get("admin", []))
+      c.Authenticator.allowed_users = set(user_roles.keys())
 
-      # ref: https://jupyterhub.readthedocs.io/en/stable/howto/configuration/config-user-env.html#named-servers
-      def custom_named_server_limit(handler):
-        user = handler.current_user.name
-        if user in users.get("admin", []):
-            return 0 # unlimited
-        elif user in users.get("gpu", []):
-            return 2 # 3 servers total
-        return 1 # 2 servers total
+      def named_server_limit(handler):
+          role = user_roles.get(handler.current_user.name, "regular")
+          return server_limits.get(role, 1)
 
       c.JupyterHub.allow_named_servers = True
-      c.JupyterHub.named_server_limit_per_user = custom_named_server_limit
+      c.JupyterHub.named_server_limit_per_user = named_server_limit
 
-    options-form: |
-      import yaml
-      import sys
+    04-profiles: |
+      from config_builder import CONFIG, dynamic_options_form_withconfig, set_spawner_resources
 
-      # import functions
-      sys.path.append('/etc/jupyterhub/config')
-      from options_form import dynamic_options_form_withconfig
-      from prespawn_hook import set_spawner_resources
-
-      # read node info
-      with open("/etc/jupyterhub/config/nodes.yaml", "r") as file:
-        node_info = yaml.safe_load(file)
-
-      # update images and options for number of GPUs here
-      CONFIG = {
-        "images": {
-            p["display_name"]: p["kubespawner_override"]["image"]
-            for p in c.KubeSpawner.profile_list
-        },
-        "gpu_counts": [1, 2, 4, 8],
-        "node_info": node_info["dev"],
-        "server_type": "cpu-gpu" # can be: "cpu-gpu", "cpu-only", and "gpu-only"
-      }
-
-      # options for users to select from
+      # setup profiles
       c.KubeSpawner.options_form = dynamic_options_form_withconfig(CONFIG)
 
       # pre-spawn hook to set resource limits based on user selections
