--- a/blackpearl_config.yaml
+++ b/blackpearl_config.yaml
@@ -49,7 +49,7 @@ singleuser:
     name: "brineylab/jupyterhub-datascience"
     tag: "v2024-09-12"
 
-  # update images here!
+  # CONFIGURE: update images here
   # dummy profiles for image pre-pulling that get overwritten at runtime
   # display names are used as keys in the options form, so don't change them
   profileList:
@@ -70,6 +70,7 @@ singleuser:
           - >
             mkdir -p ${HOME}/codeserver;
 
+  # CONFIGURE: update storage here
   storage:
     dynamic:
       storageClass: nfs-sparrow-jh-nvme
@@ -123,17 +124,24 @@ singleuser:
         mountPath: /dev/shm
 
 hub:
-  networkPolicy:
-    enabled: false
+  config:
+    JupyterHub:
+      authenticator_class: "nativeauthenticator.NativeAuthenticator"
+      default_url: "/hub/home"
+    NativeAuthenticator:
+      enable_signup: true
 
   # needs to be non-root user (root is 0)
   # ref: https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/39
   containerSecurityContext:
     runAsUser: 1000
     runAsGroup: 0
+
+  networkPolicy:
+    enabled: false
   
   extraEnv:
-    # set cluster name, as in clusters.yaml
+    # CONFIGURE: set cluster name here, matching the name in clusters.yaml
     JUPYTERHUB_CLUSTER: "blackpearl"
 
   # mount users and home page configmaps
@@ -149,14 +157,6 @@ hub:
       name: templates
     - mountPath: /etc/jupyterhub/config
       name: extra-config
-
-  config:
-    JupyterHub:
-      authenticator_class: "nativeauthenticator.NativeAuthenticator"
-      default_url: "/hub/home"
-
-    NativeAuthenticator:
-      enable_signup: true
 
   extraConfig:
     # set env variables
@@ -208,6 +208,7 @@ hub:
       c.JupyterHub.allow_named_servers = True
       c.JupyterHub.named_server_limit_per_user = named_server_limit
 
+    # setup dynamic profiles
     04-profiles: |
       from config_builder import CONFIG, dynamic_options_form_withconfig, set_spawner_resources
 
