--- a/dev_config.yaml
+++ b/dev_config.yaml
@@ -48,7 +48,7 @@ singleuser:
     name: "brineylab/jupyterhub-datascience"
     tag: "v2024-09-12"
 
-  # update images here!
+  # CONFIGURE: update images here
   # dummy profiles for image pre-pulling that get overwritten at runtime
   # display names are used as keys in the options form, so don't change them
   profileList:
@@ -69,6 +69,7 @@ singleuser:
           - >
             mkdir -p ${HOME}/codeserver;
 
+  # CONFIGURE: update storage here
   storage:
     dynamic:
       storageClass: nfs-legolas-jh
@@ -116,8 +117,12 @@ singleuser:
     #     mountPath: /dev/shm
 
 hub:
-  networkPolicy:
-    enabled: false
+  config:
+    JupyterHub:
+      authenticator_class: "nativeauthenticator.NativeAuthenticator"
+      default_url: "/hub/home"
+    NativeAuthenticator:
+      enable_signup: true
 
   # needs to be non-root user (root is 0)
   # ref: https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/39
@@ -125,21 +130,27 @@ hub:
     runAsUser: 1000
     runAsGroup: 0
 
+  networkPolicy:
+    enabled: false
+
+  # CONFIGURE: update hub database URL here
   # change hub database to postgresql (default sqlite not compatible with NFS)
   # https://jupyterhub.readthedocs.io/en/latest/explanation/database.html#sqlite
-  # db:
-  #   upgrade: true
-  #   type: postgres
-  #   url: "postgresql://brineylab:@192.168.1.1:5432/jupyterhub_db"
+  db:
+    upgrade: true
+    type: postgres
+    url: "postgresql://brineylab:@192.168.1.1:5432/jupyterhub_db"
 
   extraEnv:
-    # set cluster name, as in clusters.yaml
+    # access hub db password from env variable PGPASSWORD
+    PGPASSWORD:
+      valueFrom:
+        secretKeyRef:
+          name: postgres-secret
+          key: POSTGRES_PASSWORD
+    
+    # CONFIGURE: set cluster name here, matching the name in clusters.yaml
     JUPYTERHUB_CLUSTER: "dev"
-  #   PGPASSWORD: # will automatically provide password when env variable is named PGPASSWORD
-  #     valueFrom:
-  #       secretKeyRef:
-  #         name: postgres-secret
-  #         key: POSTGRES_PASSWORD
 
   # mount users and home page configmaps
   extraVolumes:
@@ -154,14 +165,6 @@ hub:
       name: templates
     - mountPath: /etc/jupyterhub/config
       name: extra-config
-
-  config:
-    JupyterHub:
-      authenticator_class: "nativeauthenticator.NativeAuthenticator"
-      default_url: "/hub/home"
-
-    NativeAuthenticator:
-      enable_signup: true
 
   extraConfig:
     # set env variables
@@ -213,6 +216,7 @@ hub:
       c.JupyterHub.allow_named_servers = True
       c.JupyterHub.named_server_limit_per_user = named_server_limit
 
+    # setup dynamic profiles
     04-profiles: |
       from config_builder import CONFIG, dynamic_options_form_withconfig, set_spawner_resources
 
