--- a/hub/extra_config/clusters.yaml
+++ b/hub/extra_config/clusters.yaml
@@ -72,7 +72,7 @@ dev:
     regular: 2
   status_urls:
     gpu_status_url: "http://172.29.180.191:5000/gpu_status_bynode"
-    cpu_status_url: ""
+    cpu_status_url: "http://172.29.180.191:5001/cpu_status_bynode"
   num_gpus_allowed: [1, 2, 4]
   gpu_nodes:
     # fake info for testing
